--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "eslint-config-next": "15.3.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.12",
-    "typescript": "^5"
+    "typescript": "5.9.2"
   }
 }
